# ha-lymow

./: .gitignore  AGENTS.md  API.md  BRANCH_STATUS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  hacs.json  pyproject.toml
.claude/: settings.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml  pull_request_template.md
docs/: SCREENSHOTS.md  reverse_engineering.md
examples/: dashboard.yaml
scripts/: .env.example  _decode_turn.py  _mow_monitor.py  _one_off.py  _publish_hex.py  adb_capture.sh  adb_capture_turn.sh  backup_lifecycle_capture.py  ble_drive_test.py  camera_feed_test.py  camera_test.py  cli.py  debug_mqtt.py  delete_zone.py  dock_realign_capture.py  draw_map.py  find_sync_map_cmd.py  gatt_discover.py  hci_capture.py  mow_zone.py  parse_btsnoop.py  probe_robot_config.py  query_all_diagnostics.py  query_map.py  raw_ble_drive.py  rename_test.py  rtsp_camera_test.py  smoke_test.py  sniff_all_topics.py  sniff_pbinput.py
tests/: conftest.py  test_api.py  test_auth.py  test_binary_sensor.py  test_bluetooth.py  test_button.py  test_camera.py  test_command_snapshots.py  test_config_flow.py  test_const_enums.py  test_const_error_warning_tables.py  test_coordinator.py  test_coordinator_race.py  test_coordinator_transitions.py  test_device_tracker.py  test_entity.py  test_event.py  test_geometry.py  test_init.py  test_integration_ha.py  test_lawn_mower.py  test_mqtt.py  test_mqtt_resilience.py  test_number.py  test_protocol.py  test_protocol_malformed.py  test_select.py  test_sensor.py  test_services_parity.py  test_state_key_parity.py  test_switch.py  test_text.py  test_update.py  test_wire_snapshots.py  test_work_status_invariants.py  (+1 more)
tools/: _decode_turn.py  (+9 more)
(+151 files in other folders)
