[project]
name = "ha-lymow"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13",
    "aiomqtt>=2.5.1",
]


[project.scripts]
lymow-cli = "scripts.cli:main_sync"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "aioresponses>=0.7.8",
    "ruff>=0.15.13",
    "pytest-cov>=7.1.0",
    "voluptuous>=0.16.0",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
